--- a/Powwow/Base.lproj/Main.storyboard
+++ b/Powwow/Base.lproj/Main.storyboard
@@ -70,7 +70,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ht1-On-41V">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="542"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="3M6-Po-MUK">
@@ -100,13 +100,37 @@
                                     <outlet property="delegate" destination="2bX-ir-bm1" id="3kf-X3-JeH"/>
                                 </connections>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xJf-7O-sgz">
+                                <rect key="frame" x="549" y="551" width="31" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="31" id="egY-bu-rQA"/>
+                                </constraints>
+                                <state key="normal" title="Post">
+                                    <color key="titleColor" red="0.082352941176470587" green="0.28627450980392155" blue="0.43137254901960786" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" red="0.050980396568775177" green="0.0078431377187371254" blue="0.0078431377187371254" alpha="1" colorSpace="deviceRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="sendButton:" destination="2bX-ir-bm1" eventType="touchUpInside" id="ZZj-cl-GOT"/>
+                                    <action selector="sendMessage:" destination="2bX-ir-bm1" eventType="touchUpInside" id="pxa-NV-nuV"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="What's on your mind?" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ELW-oD-jGh">
+                                <rect key="frame" x="20" y="550" width="521" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Ht1-On-41V" firstAttribute="bottom" secondItem="h2d-8M-5XH" secondAttribute="top" id="5bW-hM-Snh"/>
-                            <constraint firstItem="Ht1-On-41V" firstAttribute="leading" secondItem="lIs-qE-yTT" secondAttribute="leading" id="TK9-TC-Gjq"/>
-                            <constraint firstAttribute="trailing" secondItem="Ht1-On-41V" secondAttribute="trailing" id="jem-bE-3av"/>
-                            <constraint firstItem="Ht1-On-41V" firstAttribute="top" secondItem="lIs-qE-yTT" secondAttribute="top" id="u5M-TG-qCa"/>
+                            <constraint firstItem="Ht1-On-41V" firstAttribute="top" secondItem="lIs-qE-yTT" secondAttribute="top" id="07p-md-qTw"/>
+                            <constraint firstItem="xJf-7O-sgz" firstAttribute="trailing" secondItem="lIs-qE-yTT" secondAttribute="trailingMargin" id="0ix-PP-S5m"/>
+                            <constraint firstItem="ELW-oD-jGh" firstAttribute="top" secondItem="Ht1-On-41V" secondAttribute="bottom" constant="8" symbolic="YES" id="BME-X8-4HP"/>
+                            <constraint firstItem="ELW-oD-jGh" firstAttribute="leading" secondItem="lIs-qE-yTT" secondAttribute="leadingMargin" id="CRQ-LO-zaQ"/>
+                            <constraint firstItem="xJf-7O-sgz" firstAttribute="leading" secondItem="ELW-oD-jGh" secondAttribute="trailing" constant="8" symbolic="YES" id="DT7-FF-hnJ"/>
+                            <constraint firstAttribute="bottom" secondItem="ELW-oD-jGh" secondAttribute="bottom" constant="20" symbolic="YES" id="K9u-H8-4q8"/>
+                            <constraint firstItem="Ht1-On-41V" firstAttribute="leading" secondItem="lIs-qE-yTT" secondAttribute="leading" id="RVu-iO-oUq"/>
+                            <constraint firstItem="xJf-7O-sgz" firstAttribute="top" secondItem="Ht1-On-41V" secondAttribute="bottom" constant="9" id="T1a-Xu-lkO"/>
+                            <constraint firstAttribute="trailing" secondItem="Ht1-On-41V" secondAttribute="trailing" id="WZX-db-Sq4"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Chats" id="UFj-lL-c0O">
