--- a/Powwow/Base.lproj/Main.storyboard
+++ b/Powwow/Base.lproj/Main.storyboard
@@ -92,6 +92,9 @@
                                                 <constraint firstItem="Xo8-jw-zGn" firstAttribute="centerY" secondItem="IBC-K8-ian" secondAttribute="centerY" id="i7s-pg-vTR"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="messageLabel" destination="Xo8-jw-zGn" id="Z2h-Bv-ch2"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
